// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Calendar base demo works fine 1`] = `
<base>
  <t-calendar
    value="{{null}}"
    visible="{{false}}"
    bind:close="onClose"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    note=""
    title="单个选择日历"
    bind:tap="handleCalendar"
  />
</base>
`;

exports[`Calendar Calendar custom-range demo works fine 1`] = `
<custom-range>
  <t-calendar
    maxDate="{{1646064000000}}"
    minDate="{{1645113600000}}"
    value="{{1645113600000}}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    note="2022-02-18"
    title="含不可选的日历"
    bind:tap="handleCalendar"
  />
</custom-range>
`;

exports[`Calendar Calendar custom-text demo works fine 1`] = `
<custom-text>
  <t-cell
    arrow="{{true}}"
    data-type="single"
    note="2022-02-18"
    title="带单行描述的日历"
    bind:tap="handleCalendar"
  />
  <wx-view
    class="demo-desc"
  >
    带双行描述的日历
  </wx-view>
  <t-calendar
    data-type="single"
    format="{{[Function]}}"
    maxDate="{{1647273600000}}"
    minDate="{{1643644800000}}"
    value="{{1645113600000}}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    data-type="multiple"
    note="2022-02-18"
    title="带双行描述的日历"
    bind:tap="handleCalendar"
  />
</custom-text>
`;

exports[`Calendar Calendar local-text demo works fine 1`] = `
<local-text>
  <t-calendar
    localeText="{{
      Object {
        "confirm": "Confirm",
        "monthTitle": "{month} {year}",
        "months": Array [
          "January",
          "February",
          "March",
          "April",
          "May",
          "June",
          "July",
          "August",
          "September",
          "October",
          "November",
          "December",
        ],
        "title": "Select Date",
        "weekdays": Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ],
      }
    }}"
    maxDate="{{1647273600000}}"
    minDate="{{1643644800000}}"
    value="{{1645113600000}}"
    visible="{{false}}"
    bind:close="onClose"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    note="2022-02-18"
    title="国际化"
    bind:tap="handleCalendar"
  />
</local-text>
`;

exports[`Calendar Calendar multiple demo works fine 1`] = `
<multiple>
  <t-calendar
    type="multiple"
    value="{{null}}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    title="多个选择日历"
    bind:tap="handleCalendar"
  >
    <wx-view
      class="custom-class-note"
      slot="note"
    >
        
    </wx-view>
  </t-cell>
</multiple>
`;

exports[`Calendar Calendar range demo works fine 1`] = `
<range>
  <t-calendar
    maxDate="{{1735660800000}}"
    minDate="{{1730390400000}}"
    type="range"
    value="{{
      Array [
        1733328000000,
        1733760000000,
      ]
    }}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <wx-view
    class="wrapper"
    bind:tap="handleCalendar"
  >
    <wx-view
      class="wrapper__left"
    >
      2024-12-05
    </wx-view>
    <t-icon
      class="wrapper__center"
      name="swap-right"
      size="40rpx"
    />
    <wx-view
      class="wrapper__right"
    >
      2024-12-10
    </wx-view>
  </wx-view>
</range>
`;

exports[`Calendar Calendar switch-mode demo works fine 1`] = `
<switch-mode>
  <t-calendar
    maxDate="{{1827244800000}}"
    minDate="{{1641744000000}}"
    switchMode="year-month"
    value="{{1645891200000}}"
    visible="{{false}}"
    bind:confirm="handleConfirm"
  />
  <t-cell
    arrow="{{true}}"
    note="2022-02-27"
    title="带翻页功能的日历"
    bind:tap="handleCalendar"
  />
</switch-mode>
`;

exports[`Calendar Calendar without-popup demo works fine 1`] = `
<without-popup>
  <t-calendar
    title="日历标题"
    type="multiple"
    usePopup="{{false}}"
    bind:select="handleSelect"
  />
</without-popup>
`;
